
- #11892: Document the semantic differences of Unix.exec* between Unix and
  Windows.
  (Boris Yakobowski, review by Daniel Bünzli, Gabriel Scherer and Nicolás Ojeda
  Bär)

- #12006, #12064: Add `Marshal.Compression` flag to `Marshal.to_*` functions,
  causing marshaled data to be compressed using ZSTD.
  (Xavier Leroy, review by Edwin Török and Gabriel Scherer, fix by Damien
   Doligez)

### Other libraries:

- #11374: Remove pointer cast to a type with stricter alignment requirements
  in Windows implementation of Unix.gettimeofday. Windows implementations of
  caml_unix_map_file, caml_unix_lseek and caml_unix_lseek_64 now release the
  runtime lock. Windows implementation of caml_unix_lockf modernised and
  simplified. Where possible, 64 bit integers are used instead of LARGE_INTEGER
  structs.
  (David Allsopp, review by Jonah Beckford and Xavier Leroy)

- #11475: Make Unix terminal interface bindings domain-safe
  (Olivier Nicole and Xavier Leroy, review by Xavier Leroy)

- #11775: Unix.write on a non-blocking socket under Windows will return normally
  if the write blocks after some data has already been written (as otherwise
  there is no way of knowing how much data has been written before
  blocking). The same behaviour was already present under Unix.
  (Nicolás Ojeda Bär, review by David Allsopp)

* #11991: Unix on Windows: map ERROR_TOO_MANY_LINKS to EMLINK.
  (Nicolás Ojeda Bär)

- #12067: Document Windows specific meanings of `Unix.process_status`
  type
  (Samuel Hym, review by David Allsopp)

- #12072: Document and test that Sys.rename works over directories too
  (Jan Midtgaard, review by Anil Madhavapeddy and Xavier Leroy)

### Tools:

- #11787: Fix GDB scripts to work with OCaml 5's heap layout. (Nick
  Barnes)

- #1172: fix ocamlyacc's handling of raw string literals
  (Demi Marie Obenour)

- #9290: Add a directive to switch off debugging in toplevel.
  This allows to see optimized bytecode with -dlambda.